<resources>
    <string name="app_name">TEEDummy</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="subheader_text_protected">.</string>>
    <string name="header_text_protected">Android Protected UI Test App</string>
    <string name="prompt_name">Enter your name</string>
    <string name="prompt_amount">Enter the amount you want to send</string>
    <string name="field_name">Name</string>
    <string name="field_amount">Amount</string>
    <string name="button_try">Try it out!</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
